fix overflow x

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@
   color: #e1e1f1;
 }
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   width: 100vw;
   overflow-x: hidden;
